# esp32s3-35inch-lvgl-xiaozhi

./: .gitignore  README.md
1-示例程序Demo/ESP-IDF/3.5inch_ESP32-S3_LVGL/: XIAOZHI_DEV_HANDOFF.md  XIAOZHI_INTEGRATION_NOTES.md  partitions.csv  sdkconfig.defaults
1-示例程序Demo/ESP-IDF/3.5inch_ESP32-S3_LVGL/main/: CMakeLists.txt  app_audio.cpp  app_audio.h  app_net.cpp  app_net.h  app_radio.cpp  app_radio.h  app_time_weather.cpp  app_time_weather.h  app_ui.cpp  app_ui.h  app_xiaozhi.cpp  app_xiaozhi.h  font_radio_cn_18.c  idf_component.yml  main.cpp
1-示例程序Demo/ESP-IDF/3.5inch_ESP32-S3_LVGL/patches/78__esp-ml307/: esp_http.cc  tls_transport.cc  web_socket.cc
5-原理图_Schematic/: ESP32-S3_IO资源分配表.xlsx
docs/: HARDWARE_NOTES.md  KNOWN_ISSUES.md  NETWORK_RADIO_PLAN.md  PROJECT_HANDOFF.md  ROADMAP.md  WIFI_TIME_WEATHER.md
